# SinePhasingAnalyzer

./: LICENSE  README.MD  pyproject.toml
config/: Dam_arrest_samplesheet.csv  Dam_samplesheet.csv  MSssI_samplesheet.csv  config_dam.toml  config_dam_arrest.toml  config_dpni.toml  config_example.toml  config_msssi.toml  config_test.toml  example_samplesheet.csv  test_samplesheet.csv
docs/: _config.yaml  index.md
resource/: NAR_2016.sacCer3.MNase.csv  sacCer3.OtherFeature.csv  sacCer3.tRNA.element.csv
src/sinekit/: calculate_rate.py  cli.py  extract.py  logger.conf  phasing.py  plot_figure.py  process_bw.py  utility.py
