[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SinePhasingAnalysis"
version = "0.1.1"
description = "A package to analyze the phasing of genome accessibility using a sine wave model."
license = "MIT"
requires-python = ">=3.11"
keywords = ["kinetics", "sine wave", "phasing"]
authors = [
    { name = "Zhuwei Xu", email = "zhuweix8@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "pyBigWig>=0.3.22",
    "statsmodels>=0.14.0",
    ]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/zhuweix/SinePhasingAnalyzer"
Repository = "https://github.com/zhuweix/SinePhasingAnalyzer.git"

[project.scripts]
sinekit = "sinekit.cli:app"

[tool.black]
line-length = 80             
target-version = ["py311"] 

[tool.ruff]
target-version = "py311"
line-length = 80
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/sinekit"]